corrected countrylist countries, changed from fixed margintops and lefts to using flex gaps

--- a/src/Components/Country/style.css
+++ b/src/Components/Country/style.css
@@ -18,10 +18,10 @@ h3 {
   border-top-left-radius: 8px;
 }
 .country {
-  margin-top: 2rem;
+  /* margin-top: 2rem; */
 }
 .country:nth-of-type(1) {
-  margin-top: 0;
+  /* margin-top: 0; */
 }
 .under {
   padding: 1rem;
@@ -64,34 +64,13 @@ h3 {
     width: 100%;
     height: 100%;
   }
-  .country {
-    margin-top: 1.5rem;
-  }
-  .country:nth-of-type(1),
-  .country:nth-of-type(2) {
-    margin-top: 0;
-  }
+  
 }
 @media screen and (min-width: 819px) {
-  .country:nth-of-type(1),
-  .country:nth-of-type(2) {
-    margin-top: 0;
-  }
+
 }
 @media screen and (min-width: 998px) {
-  .country {
-    margin-top: 3rem;
-    margin-left: 2.5rem;
-  }
-  .country:nth-of-type(4n+1){
-    margin-left: 0;
-  }
-  .country:nth-of-type(1),
-  .country:nth-of-type(2),
-  .country:nth-of-type(3),
-  .country:nth-of-type(4) {
-    margin-top: 0;
-  }
+
   .under {
     padding: 1.5rem;
     padding-bottom: 2rem;
